<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_travel"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_horizontal"
        android:text="@string/title_get_ready"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/header_title_2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal"
        android:text="@string/title_new_adventure"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="-5dp"
        app:layout_constraintTop_toBottomOf="@id/header_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/description_pack_things"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toBottomOf="@id/header_title_2"/>

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black"
        android:padding="16dp"
        android:drawablePadding="10dp"
        android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
        android:background="@drawable/round_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/get_started"
        android:drawableRight="@drawable/baseline_arrow_forward_ios_24" />

</androidx.constraintlayout.widget.ConstraintLayout>