<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/hand_bg"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/idIvNotification"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/notification"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/idIvMenu" />

        <ImageView
            android:id="@+id/idIvMenu"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/menu"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@+id/header_title_2"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/header_title_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="-5dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintTop_toBottomOf="@id/header_title"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corner"
            android:drawableStart="@drawable/search"
            android:hint="@string/search"
            android:textColorHint="@color/black"
            android:autofillHints="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="10dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            android:drawableLeft="@drawable/search"
            android:drawablePadding="5dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/save_places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_horizontal"
            android:text="@string/saved_places"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/constraintLayout2"
            tools:ignore="RtlCompat" />

        <GridView
            android:id="@+id/idGVcourses"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="242dp"
            android:numColumns="2"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/save_places"
            android:horizontalSpacing="6dp"
            android:verticalSpacing="10dp" />

        <TextView
            android:id="@+id/travel_buddies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_horizontal"
            android:text="@string/travel_buddies"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/idGVcourses"
            tools:ignore="RtlCompat" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/travel_buddies"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>